--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=ASKO-backend
 
 # ????????? ????????? ?????? (PostgreSQL)
-spring.datasource.url=jdbc:postgresql://localhost:5432/asko
+spring.datasource.url=jdbc:postgresql://localhost:5432/MicroFinWay
 spring.datasource.username=postgres
 spring.datasource.password=whoami789
 
