--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,12 @@
-spring.application.name=ASKO-backend
+spring.application.name=MicroFinWay
 
-# ????????? ????????? ?????? (PostgreSQL)
+spring.liquibase.change-log=classpath:db/changelog/master.xml
 spring.datasource.url=jdbc:postgresql://localhost:5432/MicroFinWay
 spring.datasource.username=postgres
 spring.datasource.password=whoami789
 
-# JPA ? Hibernate ?????????
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# ????????? ????? ?????????? (?? ????????? 8080)
 server.port=8080
