--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,11 @@ server.port=8080
 #
 #spring.security.user.name=user
 #spring.security.user.password=whoami
+
+# JWT ?????????
+# JWT ?????????
+jwt.secret=${JWT_SECRET:whoami}
+jwt.expiration=32400000
+
+spring.elasticsearch.uris=http://localhost:9200
+logging.level.org.springframework.security=DEBUG
