db + auth jwt config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=MicroFinWay
 
 spring.liquibase.change-log=classpath:db/changelog/master.xml
-spring.datasource.url=jdbc:postgresql://localhost:5432/MicroFinWay
+#spring.datasource.url=jdbc:postgresql://localhost:5432/MicroFinWay
+spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/microfinway
 spring.datasource.username=postgres
 spring.datasource.password=whoami789
 
